--- a/index.html
+++ b/index.html
@@ -17,31 +17,29 @@
 
     <link rel="shortcut icon" href="img/icon.svg">
 
-
 </head>
 
 <body>
 
     <div class="header">
-        <div class="header_menu">
+        <div class="header-menu">
             <div class="header-logo">
                 <a href="index.html"><img src="img/LOGO.svg" alt="логотип"></a>
             </div>
 
             <div class="header-nav">
-                <nav class="main_nav">
-                    <a href="#" class="main_nav-link">обучение</a>
-                    <a href="#" class="main_nav-link"> каталог</a>
-                    <a href="#" class="main_nav-link">войти</a>
+                <nav class="main-nav">
+                    <a href="#" class="main-nav__link">обучение</a>
+                    <a href="#" class="main-nav__link"> каталог</a>
+                    <a href="#" class="main-nav__link">войти</a>
                 </nav>
             </div>
         </div>
 
         <div class="header-title">
             <img src="img/main-text.svg" alt="Искусство это интересно">
-            <button class="long-btn">Скачать приложение</button>
+            <button class="btn-long">Скачать приложение</button>
         </div>
-
 
     </div>
 
@@ -49,8 +47,65 @@
         <h2 class="main-card-title">Получите качественные знания на <span>ПроАрт</span></h2>
         <h3 class="main-card-subtitle">Онлайн-курсы от ведущих вузов и признанных экспертов</h3>
 
-        <button class="small-btn">Посмотреть каталог</button>
+        <button class="btn-small">Посмотреть каталог</button>
     </div>
+
+
+    <section class="advantage">
+        <h2 class="advantage__title">Почему ПроАрт?</h2>
+
+        <div class="advantage__block">
+
+            <div class="advantage__card">
+                <div class="advantage__card-square effective">
+                    <img class="advantage__card-icon" src="img/card-icon/effective.svg" alt="иконка">
+                </div>
+
+                <div class="advantage__card-text">
+                    <h3 class="advantage__card-title">Это эффективно</h3>
+                    <p class="advantage__card-desc">Наши курсы эффективны для изучения. Ознакомьтесь с нашими
+                        свежими исследованиями!</p>
+                </div>
+            </div>
+
+
+            <div class="advantage__card">
+                <div class="advantage__card-square cool">
+                    <img class="advantage__card-icon" src="img/card-icon/cool.svg" alt="иконка">
+                </div>
+
+                <div class="advantage__card-text">
+                    <h3 class="advantage__card-title">Это классно</h3>
+                    <p class="advantage__card-desc">Доступ к оценкам и решениям своих студентов в любых открытых курсах.
+                        Собирайте свой класс вместе!</p>
+                </div>
+            </div>
+
+            <div class="advantage__card">
+                <div class="advantage__card-square interesting">
+                    <img class="advantage__card-icon" src="img/card-icon/intresting.svg" alt="иконка">
+                </div>
+
+                <div class="advantage__card-text">
+                    <h3 class="advantage__card-title">Это увлекательно</h3>
+                    <p class="advantage__card-desc">Выполняйте практические задания, получайте обратную связь и
+                        закрепляйте знания.</p>
+                </div>
+            </div>
+
+            <div class="advantage__card">
+                <div class="advantage__card-square no-boring">
+                    <img class="advantage__card-icon" src="img/card-icon/no_boring.svg" alt="иконка">
+                </div>
+
+                <div class="advantage__card-text">
+                    <h3 class="advantage__card-title">Это нескучно</h3>
+                    <p class="advantage__card-desc">С нашим игровым подходом занятия будут достовлять удовольствие.</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </body>
 
 </html>
