add: courses-banner

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
         <button class="btn-small">Посмотреть каталог</button>
     </div>
 
-
     <section class="advantage">
         <h2 class="advantage__title">Почему ПроАрт?</h2>
 
@@ -104,6 +103,21 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <section class="courses-banner">
+        <div class="courses-banner__block">
+            <div class="courses-banner__bloc-text">
+                <h2 class="courses-banner__block__title">Онлайн-курсы для изучения авангардного искусства</h2>
+                <p class="courses-banner__block__desc">
+                    Получайте балы за правильные ответы и пройденные тесты, открывайте новые материалы и интересные
+                    игры. Наши короткие уроки действительно работают, и мы можем это доказать.
+                </p>
+            </div>
+        </div>
+        <div class="courses-banner__block-img">
+            <img class="courses-banner__img" src="img/courses.png" alt="скрин экрана телефона">
         </div>
     </section>
 </body>
