add:class main-title, main-desc; add:download

--- a/index.html
+++ b/index.html
@@ -44,17 +44,16 @@
     </div>
 
     <div class="main-card">
-        <h2 class="main-card-title">Получите качественные знания на <span>ПроАрт</span></h2>
-        <h3 class="main-card-subtitle">Онлайн-курсы от ведущих вузов и признанных экспертов</h3>
+        <h3 class="main-card-title">Получите качественные знания на <span>ПроАрт</span></h3>
+        <h4 class="main-card-desc main-desc">Онлайн-курсы от ведущих вузов и признанных экспертов</h4>
 
         <button class="btn-small">Посмотреть каталог</button>
     </div>
 
     <section class="advantage">
-        <h2 class="advantage__title">Почему ПроАрт?</h2>
+        <h2 class="advantage__title main-title">Почему ПроАрт?</h2>
 
         <div class="advantage__block">
-
             <div class="advantage__card">
                 <div class="advantage__card-square effective">
                     <img class="advantage__card-icon" src="img/card-icon/effective.svg" alt="иконка">
@@ -62,11 +61,10 @@
 
                 <div class="advantage__card-text">
                     <h3 class="advantage__card-title">Это эффективно</h3>
-                    <p class="advantage__card-desc">Наши курсы эффективны для изучения. Ознакомьтесь с нашими
+                    <p class="advantage__card-desc main-desc">Наши курсы эффективны для изучения. Ознакомьтесь с нашими
                         свежими исследованиями!</p>
                 </div>
             </div>
-
 
             <div class="advantage__card">
                 <div class="advantage__card-square cool">
@@ -75,7 +73,8 @@
 
                 <div class="advantage__card-text">
                     <h3 class="advantage__card-title">Это классно</h3>
-                    <p class="advantage__card-desc">Доступ к оценкам и решениям своих студентов в любых открытых курсах.
+                    <p class="advantage__card-desc main-desc">Доступ к оценкам и решениям своих студентов в любых
+                        открытых курсах.
                         Собирайте свой класс вместе!</p>
                 </div>
             </div>
@@ -87,8 +86,8 @@
 
                 <div class="advantage__card-text">
                     <h3 class="advantage__card-title">Это увлекательно</h3>
-                    <p class="advantage__card-desc">Выполняйте практические задания, получайте обратную связь и
-                        закрепляйте знания.</p>
+                    <p class="advantage__card-desc main-desc">Выполняйте практические задания, получайте обратную связь
+                        и закрепляйте знания.</p>
                 </div>
             </div>
 
@@ -99,18 +98,19 @@
 
                 <div class="advantage__card-text">
                     <h3 class="advantage__card-title">Это нескучно</h3>
-                    <p class="advantage__card-desc">С нашим игровым подходом занятия будут достовлять удовольствие.</p>
+                    <p class="advantage__card-desc main-desc">С нашим игровым подходом занятия будут достовлять
+                        удовольствие.</p>
                 </div>
             </div>
-
         </div>
     </section>
 
     <section class="courses-banner">
         <div class="courses-banner__block">
-            <div class="courses-banner__bloc-text">
-                <h2 class="courses-banner__block__title">Онлайн-курсы для изучения авангардного искусства</h2>
-                <p class="courses-banner__block__desc">
+            <div class="courses-banner__block-text">
+                <h2 class="courses-banner__block__title main-title">Онлайн-курсы для изучения авангардного искусства
+                </h2>
+                <p class="courses-banner__block__desc main-desc">
                     Получайте балы за правильные ответы и пройденные тесты, открывайте новые материалы и интересные
                     игры. Наши короткие уроки действительно работают, и мы можем это доказать.
                 </p>
@@ -118,6 +118,39 @@
         </div>
         <div class="courses-banner__block-img">
             <img class="courses-banner__img" src="img/courses.png" alt="скрин экрана телефона">
+        </div>
+    </section>
+
+    <section class="download">
+        <div class="download__block-text">
+            <h2 class="download__title main-title">Изучайте искусство в любое время и в любом месте</h2>
+            <p class="download__desc main-desc">
+                Проводите перерывы или время в пути с пользой с нашими приложениями для iPhone и Android.
+            </p>
+            <p class="download__desc main-desc"> Загрузите их, и вы поймёте, почему мы получили от Apple и Google самые
+                лестные отзывы.
+            </p>
+        </div>
+
+        <div class="download__block">
+            <img class="download__block-img" src="img/download_img.png" alt="картинка">
+
+            <div class="download__block__buttons">
+                <div class="download__block__item download-google">
+                    <a class="download__block__link" href="#">
+                        <img class="download__block__link-img" src="img/google-play.svg" alt="иконка google-play">
+                        <p class="download__block__link-text">Доступно в Google Play</p>
+                    </a>
+                </div>
+
+                <div class="download__block__item download-apple">
+                    <a class="download__block__link" href="#">
+                        <img class="download__block__link-img" src="img/apple.svg" alt="иконка apple">
+                        <p class="download__block__link-text">Скачать в App Store</p>
+                    </a>
+                </div>
+
+            </div>
         </div>
     </section>
 </body>
