edit:download : add circle-img, add button:hover

--- a/index.html
+++ b/index.html
@@ -143,12 +143,15 @@
                     </a>
                 </div>
 
+                <div class="circle-img"></div>
                 <div class="download__block__item download-apple">
                     <a class="download__block__link" href="#">
                         <img class="download__block__link-img" src="img/apple.svg" alt="иконка apple">
                         <p class="download__block__link-text">Скачать в App Store</p>
                     </a>
                 </div>
+
+
 
             </div>
         </div>
