add: lessons-banner

--- a/index.html
+++ b/index.html
@@ -150,9 +150,23 @@
                         <p class="download__block__link-text">Скачать в App Store</p>
                     </a>
                 </div>
+            </div>
+        </div>
+    </section>
 
+    <section class="lessons-banner">
+        <div class="lessons-banner__block-img">
+            <img class="lessons-banner__img" src="img/lessons.png" alt="скрин экрана телефона">
+        </div>
 
-
+        <div class="lessons-banner__block">
+            <div class="lessons-banner__block-text">
+                <h2 class="lessons-banner__block__title main-title">ПроАрт для уроков!</h2>
+                <p class="lessons-banner__block__desc main-desc">
+                    Бесплатный инструмент для преподавателей истории искусств.
+                    Используйте ГуруАрт для обучения в классе и дома.
+                </p>
+                <button class="btn-long">Скачать приложение</button>
             </div>
         </div>
     </section>
