--- a/index.html
+++ b/index.html
@@ -170,6 +170,32 @@
             </div>
         </div>
     </section>
+
+    <section class="reviews">
+        <div class="reviews-left">
+            <h2 class="reviews__title main-title">Люди, которые уже попробовали!</h2>
+            <div class="reviews__btn">
+                <a href="#" class="slider-btn slider-btn-left">←</a>
+                <a href="#" class="slider-btn slider-btn-right">→</a>
+            </div>
+        </div>
+
+        <div class="reviews-right">
+            <div class="reviews-right__block">
+                <img class="reviews-right__img" src="img/quote.svg" alt="кавычки">
+                <div class="reviews-right__text">
+                    <p class="reviews-right__desc main-desc">
+                        Отличные курсы, лучшие из всех, что я когда-либо проходил. С <b>ПроАрт</b> я познакомился в
+                        университете, где онлайн-задания довольно успешно внедрялись преподавателями в учебный план.
+                    </p>
+                    <div class="reviews-right__author">
+                        <img class="reviews-right__avatar" src="img/review-1.jpg" alt="фото пользователя">
+                        <span class="author-name main-desc">— Колов Николай</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
