add: promo-widget

--- a/index.html
+++ b/index.html
@@ -218,11 +218,17 @@
         </div>
     </section>
 
+    <section class="promo-widget">
+        <h2 class="promo-widget__title main-title">Изучайте искусство с ПроАрт</h2>
+        <p class="promo-widget__desc main-desc">
+            Начать учиться можно прямо сейчас, выбирайте курс и проходите его, зарабатывая балы и получая награды!
+        </p>
+        <button class="btn-small ">Посмотреть каталог</button>
+    </section>
 
 
 
-
-    <script src="reviewSlider.js"></script>
+    <script src="reviewSlider.js "></script>
 </body>
 
 </html>
