--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <div class="header">
+    <section class="header">
         <div class="header-menu">
             <div class="header-logo">
                 <a href="index.html"><img src="img/LOGO.svg" alt="логотип"></a>
@@ -39,8 +39,7 @@
             <img src="img/main-text.svg" alt="Искусство это интересно">
             <a class="btn-long" href="#download">Скачать приложение</a>
         </div>
-
-    </div>
+    </section>
 
     <div class="main-card">
         <h3 class="main-card-title">Получите качественные знания на <span>ПроАрт</span></h3>
@@ -224,6 +223,57 @@
             Начать учиться можно прямо сейчас, выбирайте курс и проходите его, зарабатывая балы и получая награды!
         </p>
         <button class="btn-small ">Посмотреть каталог</button>
+    </section>
+
+    <section class="footer">
+        <div class="footer-container">
+            <div class="footer__items__wrap">
+                <div class="footer__item">
+                    <div class="item-name">
+                        <a href="index.html" class="item-name-link footer-logo">ПроАрт</a>
+                    </div>
+                    <div class="item-source">
+                        <a href="#" class="item-link">Обучение</a>
+                        <a href="#" class="item-link">Каталог</a>
+                        <a href="#" class="item-link">Войти</a>
+                    </div>
+                </div>
+
+                <div class="footer__item">
+                    <div class="item-name">
+                        <span class="item-name-link">Приложение:</span>
+                    </div>
+                    <div class="item-source">
+                        <a href="#" class="item-link">ПроАрт для iOS</a>
+                        <a href="#" class="item-link">Проарт для Android</a>
+                    </div>
+                </div>
+
+                <div class="footer__item">
+                    <div class="item-name">
+                        <span class="item-name-link">Условия:</span>
+                    </div>
+                    <div class="item-source">
+                        <a href="#" class="item-link">Условия использования</a>
+                        <a href="#" class="item-link">Условия Конфиденциальности</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer__item">
+                <div class="footer-social">
+                    <a href="#" class="social-link"><img src="img/footer-icon/youtube.svg" alt="иконка youtube"></a>
+                    <a href="#" class="social-link"><img src="img/footer-icon/facebook.svg" alt="иконка facebook"></a>
+                    <a href="#" class="social-link"><img src="img/footer-icon/linkedin.svg" alt="иконка linkedin"></a>
+                    <a href="#" class="social-link"><img src="img/footer-icon/twitter.svg" alt="иконка twitter"></a>
+                    <a href="#" class="social-link"><img src="img/footer-icon/instagram.svg" alt="иконка instagram"></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="copyright">
+            <p class="copyright-text">Copyright © 2022 Zhidko Ulyana. All rights reserved.</p>
+        </div>
     </section>
 
 
