add: media header

--- a/index.html
+++ b/index.html
@@ -19,31 +19,32 @@
 </head>
 
 <body>
-
     <section class="header">
-        <div class="header-menu">
-            <div class="header-logo">
-                <a href="index.html"><img src="img/LOGO.svg" alt="логотип"></a>
+        <div class="container">
+            <div class="header-menu">
+                <div class="header-logo">
+                    <a href="index.html">ПроАрт</a>
+                </div>
+
+                <div class="header-nav">
+                    <nav class="main-nav">
+                        <a href="#" class="main-nav__link">обучение</a>
+                        <a href="#" class="main-nav__link"> каталог</a>
+                        <a href="#" class="main-nav__link">войти</a>
+                    </nav>
+                </div>
             </div>
 
-            <div class="header-nav">
-                <nav class="main-nav">
-                    <a href="#" class="main-nav__link">обучение</a>
-                    <a href="#" class="main-nav__link"> каталог</a>
-                    <a href="#" class="main-nav__link">войти</a>
-                </nav>
+            <div class="header-title">
+                <img class="header-logo-img" src="img/main-text.svg" alt="Искусство это интересно">
+                <a class="btn-long" href="#download">Скачать приложение</a>
             </div>
-        </div>
-
-        <div class="header-title">
-            <img src="img/main-text.svg" alt="Искусство это интересно">
-            <a class="btn-long" href="#download">Скачать приложение</a>
         </div>
     </section>
 
     <div class="main-card">
         <h3 class="main-card-title">Получите качественные знания на <span>ПроАрт</span></h3>
-        <h4 class="main-card-desc main-desc">Онлайн-курсы от ведущих вузов и признанных экспертов</h4>
+        <h4 class="main-card-desc main-desc">Онлайн-курсы от ведущих вузов и&nbsp;признанных экспертов</h4>
 
         <button class="btn-small">Посмотреть каталог</button>
     </div>
@@ -147,7 +148,7 @@
     </section>
 
     <section class="reviews slider">
-        <div class="reviews__circle-img"></div>
+        <div class="circle-img reviews__circle-img"></div>
 
         <div class="item">
             <div class="reviews-block">
@@ -275,7 +276,6 @@
             <p class="copyright-text">Copyright © 2022 Zhidko Ulyana. All rights reserved.</p>
         </div>
     </section>
-
 
 
     <script src="reviewSlider.js "></script>
