add: media advantage

--- a/index.html
+++ b/index.html
@@ -50,51 +50,53 @@
     </div>
 
     <section class="advantage">
-        <h2 class="advantage__title main-title">Почему ПроАрт?</h2>
+        <div class="container">
+            <h2 class="advantage__title main-title">Почему ПроАрт?</h2>
 
-        <div class="advantage__block">
-            <div class="advantage__card">
-                <div class="advantage__card-square effective">
-                    <img class="advantage__card-icon" src="img/card-icon/effective.svg" alt="иконка">
+            <div class="advantage__block">
+                <div class="advantage__card">
+                    <div class="advantage__card-square effective">
+                        <img class="advantage__card-icon" src="img/card-icon/effective.svg" alt="иконка">
+                    </div>
+
+                    <div class="advantage__card-text">
+                        <h3 class="advantage__card-title">Это эффективно</h3>
+                        <p class="advantage__card-desc main-desc">Наши курсы эффективны для изучения. Ознакомьтесь с нашими свежими исследованиями!</p>
+                    </div>
                 </div>
 
-                <div class="advantage__card-text">
-                    <h3 class="advantage__card-title">Это эффективно</h3>
-                    <p class="advantage__card-desc main-desc">Наши курсы эффективны для изучения. Ознакомьтесь с нашими свежими исследованиями!</p>
-                </div>
-            </div>
+                <div class="advantage__card">
+                    <div class="advantage__card-square cool">
+                        <img class="advantage__card-icon" src="img/card-icon/cool.svg" alt="иконка">
+                    </div>
 
-            <div class="advantage__card">
-                <div class="advantage__card-square cool">
-                    <img class="advantage__card-icon" src="img/card-icon/cool.svg" alt="иконка">
-                </div>
-
-                <div class="advantage__card-text">
-                    <h3 class="advantage__card-title">Это классно</h3>
-                    <p class="advantage__card-desc main-desc">Доступ к оценкам и решениям своих студентов в любых открытых курсах. Собирайте свой класс вместе!</p>
-                </div>
-            </div>
-
-            <div class="advantage__card">
-                <div class="advantage__card-square interesting">
-                    <img class="advantage__card-icon" src="img/card-icon/intresting.svg" alt="иконка">
+                    <div class="advantage__card-text">
+                        <h3 class="advantage__card-title">Это классно</h3>
+                        <p class="advantage__card-desc main-desc">Доступ к оценкам и решениям своих студентов в любых открытых курсах. Собирайте свой класс вместе!</p>
+                    </div>
                 </div>
 
-                <div class="advantage__card-text">
-                    <h3 class="advantage__card-title">Это увлекательно</h3>
-                    <p class="advantage__card-desc main-desc">Выполняйте практические задания, получайте обратную связь и закрепляйте знания.</p>
-                </div>
-            </div>
+                <div class="advantage__card">
+                    <div class="advantage__card-square interesting">
+                        <img class="advantage__card-icon" src="img/card-icon/intresting.svg" alt="иконка">
+                    </div>
 
-            <div class="advantage__card">
-                <div class="advantage__card-square no-boring">
-                    <img class="advantage__card-icon" src="img/card-icon/no_boring.svg" alt="иконка">
+                    <div class="advantage__card-text">
+                        <h3 class="advantage__card-title">Это увлекательно</h3>
+                        <p class="advantage__card-desc main-desc">Выполняйте практические задания, получайте обратную связь и закрепляйте знания.</p>
+                    </div>
                 </div>
 
-                <div class="advantage__card-text">
-                    <h3 class="advantage__card-title">Это нескучно</h3>
-                    <p class="advantage__card-desc main-desc">С нашим игровым подходом занятия будут достовлять удовольствие.
-                    </p>
+                <div class="advantage__card">
+                    <div class="advantage__card-square no-boring">
+                        <img class="advantage__card-icon" src="img/card-icon/no_boring.svg" alt="иконка">
+                    </div>
+
+                    <div class="advantage__card-text">
+                        <h3 class="advantage__card-title">Это нескучно</h3>
+                        <p class="advantage__card-desc main-desc">С нашим игровым подходом занятия будут достовлять удовольствие.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
