--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </section>
 
     <section class="promo-widget">
-        <h2 class="promo-widget__title main-title">Изучайте искусство с ПроАрт</h2>
+        <h2 class="promo-widget__title main-title">Изучайте искусство с&nbsp;ПроАрт</h2>
         <p class="promo-widget__desc main-desc">
             Начать учиться можно прямо сейчас, выбирайте курс и проходите его, зарабатывая балы и получая награды!
         </p>
