--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <link rel="shortcut icon" href="img/icon.svg">
 
@@ -30,7 +30,7 @@
                     <nav class="main-nav">
                         <a href="#" class="main-nav__link">обучение</a>
                         <a href="#" class="main-nav__link"> каталог</a>
-                        <a href="#" class="main-nav__link">войти</a>
+                        <a href="login.html" class="main-nav__link">войти</a>
                     </nav>
                 </div>
             </div>
@@ -280,7 +280,7 @@
     </section>
 
 
-    <script src="reviewSlider.js "></script>
+    <script src="js/reviewSlider.js"></script>
 </body>
 
 </html>
