--- a/login.html
+++ b/login.html
@@ -24,11 +24,10 @@
 
 
     <section class="main login">
-        <div class="main-left">
-            <div class="header-logo">
-                <a href="index.html">ПроАрт</a>
-            </div>
+        <div class="header-logo">
+            <a href="index.html">ПроАрт</a>
         </div>
+
         <div class="main-right">
             <div class="right-header">
                 <div class="right-header__text">
@@ -91,6 +90,9 @@
             </div>
 
         </div>
+
+        <div class="main-photo"> </div>
+
     </section>
 
 
