--- a/login.html
+++ b/login.html
@@ -34,15 +34,13 @@
                     <h1 class="right-header-title">Вход в аккаунт</h1>
                     <p class="right-header-subtitle">Привет, уже есть аккаунт?</p>
                 </div>
-                <div class="right-header__lang">
-                    <ul class="page-langs">
-                        <li class="page-langs-item">
-                            <a href="#">RU</a>
-                        </li>
-                        <li class="page-langs-item">
-                            <a a href="#">EN</a>
-                        </li>
-                    </ul>
+
+                <div class="lang-dropdown">
+                    <div class="lang_btn">RU</div>
+                    <div class="dropdown-content">
+                        <a href="#">RU</a>
+                        <a href="#">EN</a>
+                    </div>
                 </div>
             </div>
 
@@ -56,12 +54,12 @@
                 <div id="Email" class="tabcontent">
                     <div class="center">
                         <form method="post">
-                            <div class="txt_field">
+                            <div class="txt-field">
                                 <input type="text" required>
                                 <span></span>
                                 <label>Email</label>
                             </div>
-                            <div class="txt_field">
+                            <div class="txt-field">
                                 <input type="password" required>
                                 <span></span>
                                 <label>Пароль</label>
@@ -76,7 +74,7 @@
                 <div id="Phone" class="tabcontent">
                     <div class="center">
                         <form method="post">
-                            <div class="txt_field">
+                            <div class="txt-field">
                                 <input type="tel" required>
                                 <span></span>
                                 <label>Номер телефона</label>
