edit: show_hide_password

--- a/login.html
+++ b/login.html
@@ -59,8 +59,9 @@
                                 <span></span>
                                 <label>Email</label>
                             </div>
-                            <div class="txt-field">
-                                <input type="password" required>
+                            <div class="txt-field password">
+                                <input type="password" id="password-input" name="password" required>
+                                <a href="#" class="password-control" onclick="return show_hide_password(this);"></a>
                                 <span></span>
                                 <label>Пароль</label>
                             </div>
@@ -95,7 +96,7 @@
 
 
 
-    <script src="js/loginTab.js"></script>
+    <script src="js/login.js"></script>
 </body>
 
 </html>
